			SWI-Prolog ChangeLog
			====================

Version 2.0.0
=============

  * Added `Quick Load File' compilation support.  See qcompile/1 and
    qload/1.  Alpha stage.
  * Important FIX to the garbage collector.  This bug may happen iff
    a garbage collection is invoked while clauses are active that have
    \+ or (a -> b ; c) constructs that are not yet active.  Generally
    the problem is reported as an inconsistency in the relocation count.
  * Fix to virtual machine encoding that applies to versions compiled
    with gcc 2.x and whose text-space starts at a high address.
  * Modified absolute_file_name/2 to take specifications of the
    form absolute_file_name(library('shell.pl'), X).
  * Various fixes to the new .qlf format and support for compiliation 
    of individual or combined sources into .qlf files.  .qlf files may
    now be loaded as normal sourcefiles instead of only as `boot' file.


Version 1.9.6:
==============

  * Fixed for BIN_ENDIAN machines (Intel, VAX, ...)
  * Windows version: added dde_execute/2
  * Added Quintus compatible foreign-language (C) interface.
  * Changed .qlf (former .wic) format drastically.  The current
    format gives about 30% shorter files and loads twice as fast.
  * Changed basic clause representation.  VM op-codes are now
    full machine words, avoiding the need for the `XR' table
    management and related indirections.  Simplifies the instruction set,
    speedup for compiler, decompiler (retract, clause) and execution
    (about 10%).  Enlarges program-size with about 10%.


Version 1.9.5:
==============

alpha-2

  * Fixed prolog_frame_attribute/3 for key=parent.
  * Added at_initialisation(+Goal) for initialisation hooks
  * Fixed tracer problems introduced in 1.9.5-alpla-1.


alpha-1

  * Moved sourcecode administration from predicate to individual
    clauses.  Purpose: better source-level debugger support, better
    handling of multifile predicates.
